@@ -1,4 +1,7 @@
 ::Get the current batch file's short path
+
 for %%x in (%0) do set BatchPath=%%~dpsx
+
 for %%x in (%BatchPath%) do set BatchPath=%%~dpsx
-java  -XX:+IgnoreUnrecognizedVMOptions --illegal-access=permit --add-modules=java.xml.bind -Xmx4000m -Dproduction=true -Djava.net.preferIPv4Stack=true -Dsun.java2d.noddraw=true -jar %BatchPath%\igv.jar  %*
+
+java --module-path=%BatchPath%\lib -Xmx4000m -Dproduction=true @%BatchPath%\igv.args -Djava.net.preferIPv4Stack=true -Dsun.java2d.noddraw=true --module org.broad.igv/org.broad.igv.ui.Main  %*
